# AngryBot

./: .gitignore  Cargo.toml
src/: main.rs
src/commands/: angry.rs  auto_reacts.rs  clean_chan.rs  gif_timer.rs  mod.rs
