[package]
name    = "angry_bot"
version = "0.1.0"
authors = ["Simon Fernandez <simon.fernandez@ens-lyon.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.9.3"
tokio    = { version = "0.2", features = ["macros"] }
